--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "deploy": "npm run build && gh-pages -d dist"
-  },
+"scripts": {
+  "build": "vue-cli-service build",
+  "deploy": "gh-pages -d dist"
+}
+,
   "dependencies": {
     "bootstrap": "^4.6.2",
     "pinia": "^3.0.3",
